retrieve winner on GET game and freeze screen if game is over

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -5,8 +5,6 @@
   <header>
     {% block header %}{% endblock %}
   </header>
-  {% for message in get_flashed_messages() %}
-    <div class="flash">{{ message }}</div>
-  {% endfor %}
   {% block content %}{% endblock %}
+    <div id="flash"></div>
 </section>
