--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -13,5 +13,5 @@
 <input id="p20" type="text" onchange="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
 <input id="p21" type="text" onchange="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
 <input id="p22" type="text" onchange="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1"><br>
-<script>window.setInterval(fillBoard, 1000); </script>
+<script>var main_interval =window.setInterval(fillBoard, 1000); </script>
 {% endblock %}
