correct post json

--- a/frontend/templates/games.html
+++ b/frontend/templates/games.html
@@ -5,6 +5,6 @@
 
 {% block content %}
     <div id="listGames"></div>
-    <script>window.listGames();</script>
+    <script>listGames();</script>
     <input id="newGame" type="button" value="New Game" onclick="startNewGame();" />
 {% endblock %}
