--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,4 +1,7 @@
 <!doctype html>
+<meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+<meta http-equiv="Pragma" content="no-cache" />
+<meta http-equiv="Expires" content="0" />
 <title>Tic Tac Toe By Ramon Medeiros</title>
 <script src="{{ url_for('static', filename='functions.js') }}"></script>
 <section class="content">
