display error messages

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -9,5 +9,5 @@
     {% block header %}{% endblock %}
   </header>
   {% block content %}{% endblock %}
-    <div id="flash"></div>
+    <div id="flash"><h2 id="error"></h2></div>
 </section>
