--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -4,6 +4,7 @@
 {% endblock %}
 
 {% block content %}
+<button id="back" type="button" onclick="window.location.replace(window.location.origin)">Back</button><br><br>
 <input id="p00" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
 <input id="p01" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
 <input id="p02" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1"><br>
@@ -13,5 +14,5 @@
 <input id="p20" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
 <input id="p21" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
 <input id="p22" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1"><br>
-<script>var main_interval =window.setInterval(fillBoard, 1000); </script>
+<script>fillBoard(); var main_interval =window.setInterval(fillBoard, 2000); </script>
 {% endblock %}
