change UI and let user change X or O

--- a/frontend/templates/game.html
+++ b/frontend/templates/game.html
@@ -5,14 +5,20 @@
 
 {% block content %}
 <button id="back" type="button" onclick="window.location.replace(window.location.origin)">Back</button><br><br>
-<input id="p00" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
-<input id="p01" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
-<input id="p02" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1"><br>
-<input id="p10" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
-<input id="p11" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
-<input id="p12" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1"><br>
-<input id="p20" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
-<input id="p21" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1">
-<input id="p22" type="text" oninput="doMove(this.id);" autocomplete="new-password" style="height:50px;width:44px;font-size:44pt;" minlength="0" maxlength="1"><br>
+<h2>Choose your side:</h2>
+  <input type="radio" name="player" id='x' checked> Player X
+  <input type="radio" name="player" id='o'> Player O
+  <input type="radio" name="player" id='visitor'> Watching<br><br>
+
+
+<input id="p00" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" >
+<input id="p01" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" >
+<input id="p02" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" ><br>
+<input id="p10" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" >
+<input id="p11" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" >
+<input id="p12" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" ><br>
+<input id="p20" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" >
+<input id="p21" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" >
+<input id="p22" type="button" value=" - " onclick="doMove(this.id);"  style="height:70px;width:70px;font-size:44pt;" ><br>
 <script>fillBoard(); var main_interval =window.setInterval(fillBoard, 2000); </script>
 {% endblock %}
